# scarlett_ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  personality.md  pyproject.toml  vllm.Dockerfile
.github/workflows/: docker.yml  tests.yml
lavalink/: application.yml
scarlett/: __main__.py  bot.py  config.py  db.py  health.py  llm.py  ratelimit.py  timeparse.py
scarlett/cogs/: chat.py  general.py  health.py  music.py  timestamps.py
tests/: test_health.py  test_music.py  test_ratelimit.py  test_timeparse.py  test_timestamps.py
