[project]
name = "scarlett"
version = "0.1.0"
description = "Discord bot with a local LLM personality, timestamp coordination, and music playback"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice]>=2.4",
    "wavelink>=3.4",
    "openai>=1.60",
    "pydantic-settings>=2.6",
    "aiosqlite>=0.20",
    "dateparser>=1.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scarlett*"]
